[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/mage/mage_animation_moving.png" type="Texture" id=1]
[ext_resource path="res://scenes/main_game/timer/Timer.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/main_game/hearts/Hearts.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/main_game/mage/Mage.gd" type="Script" id=5]
[ext_resource path="res://scenes/main_game/hearts/AnimatedHeart.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 250, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 350, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 50, 50 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "moving",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "stopped",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 14.0089

[node name="Mage" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "stopped"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpeedTimer" type="Timer" parent="."]

[node name="ZoomTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -0.00642684, 0.00573689 )
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" parent="Camera2D" instance=ExtResource( 3 )]
position = Vector2( 21, -63 )
scale = Vector2( 0.75, 0.75 )

[node name="Hearts" parent="Camera2D" instance=ExtResource( 4 )]
position = Vector2( -33, -54 )
scale = Vector2( 0.75, 0.75 )

[node name="AnimatedHeart" parent="Camera2D" instance=ExtResource( 6 )]
visible = false
scale = Vector2( 2, 2 )
[connection signal="timeout" from="SpeedTimer" to="." method="_on_SpeedTimer_timeout"]
[connection signal="timeout" from="ZoomTimer" to="." method="_on_ZoomTimer_timeout"]
[connection signal="Times_out" from="Camera2D/Timer" to="." method="_on_Timer_Times_out"]
[connection signal="animation_finished" from="Camera2D/AnimatedHeart" to="." method="_on_AnimatedHeart_animation_finished"]
